# Sidodzdev-v01

./: .gitignore  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
assets/i18n/: ar.json  en.json
docs/: ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  FLOW_DIAGRAM.md  FUTURE_IMPROVEMENTS.md  RELEASE_PLAN.md  TEST_PLAN.md
src/: lib.rs  main.rs
src/core/: app_state.rs  config.rs  events.rs  mod.rs  worker.rs
src/disk/: device.rs  enumerator.rs  format.rs  mod.rs  partition.rs  verifier.rs  writer.rs
src/iso/: boot.rs  hybrid.rs  mod.rs  parser.rs  validator.rs
src/ui/: app.rs  i18n.rs  mod.rs  styles.rs
src/ui/components/: device_list.rs  iso_selector.rs  log_panel.rs  mod.rs  options_panel.rs  progress_panel.rs
src/utils/: async_utils.rs  hash.rs  logging.rs  mod.rs  platform.rs
